test/invalid/new-override.js
function Constr(x) { this.bla = x;  }
var constr = new Constr(2);
constr.bla = 'a';
